--- a/CNewsProject/Views/Subscription/Cancel.cshtml
+++ b/CNewsProject/Views/Subscription/Cancel.cshtml
@@ -1,6 +1,5 @@
 ﻿
-<div class="text-center">
-	<h1>Payment Cancelled!</h1>
-	<img src="https://rates.fm/static/content/thumbs/388x218/d/b3/726eug---c1034x582x50px50p--e77928a0cd69bf4d04e9583dc8263b3d.jpg" alt="Payment Cancelled Image" />
-	<h5> We hope you will have the opportunity to visite our Cnews site again. </h5>
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+	<h2>Payment Cancelled!</h2>
+	@* <img src="https://rates.fm/static/content/thumbs/388x218/d/b3/726eug---c1034x582x50px50p--e77928a0cd69bf4d04e9583dc8263b3d.jpg" alt="Payment Cancelled Image" /> *@
 </div>
