--- a/CNewsProject/Views/Admin/Claims.cshtml
+++ b/CNewsProject/Views/Admin/Claims.cshtml
@@ -3,16 +3,8 @@
     ViewData["Title"] = "CLAIMS";
 }
 
-<style>
-    td:nth-of-type(1):before { content: "Subject"; }
-    td:nth-of-type(2):before { content: "Issuer"; }
-    td:nth-of-type(3):before { content: "Type"; }
-    td:nth-of-type(4):before { content: "Value"; }
-</style>
-
 <h2 class="m-1 p-1">Claims</h2>
-<div class="table-responsive">
-<table class="table table-sm table-bordered" style="white-space: nowrap">
+<table class="table table-sm table-bordered table-striped" id="claims-table">
     <thead>
     <tr>
         <th>Subject</th>
@@ -33,4 +25,3 @@
     }
     </tbody>
 </table>
-</div>
