--- a/CNewsProject/Views/Admin/UpdateRole.cshtml
+++ b/CNewsProject/Views/Admin/UpdateRole.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "UPDATE ROLE";
 }
 
-<h1 class="bg-info text-white">Update Role</h1>
+<h2 class="">Update Role</h2>
 <a asp-action="Roles" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -11,28 +11,8 @@
     <input type="hidden" name="roleName" value="@Model.Role.Name" />
     <input type="hidden" name="roleId" value="@Model.Role.Id" />
 
-    <h2 class="bg-info p-1 text-white">Grant @Model.Role.Name</h2>
-    <table class="table table-bordered table-sm">
-        @if (Model.NonMembers.Count() == 0)
-        {
-            <tr><td colspan="2">All Users Are Members</td></tr>
-        }
-        else
-        {
-            @foreach (AppUser user in Model.NonMembers)
-            {
-                <tr>
-                    <td>@user.UserName</td>
-                    <td>
-                        <input type="checkbox" name="AddIds" value="@user.Id">
-                    </td>
-                </tr>
-            }
-        }
-    </table>
-
-    <h2 class="bg-info p-1 text-white">Purge @Model.Role.Name</h2>
-    <table class="table table-bordered table-sm">
+    <h3 class="p-1">Purge @Model.Role.Name</h3>
+    <table class="table table-bordered table-sm table-striped purgeGrantRoleTable">
         @if (Model.Members.Count() == 0)
         {
             <tr><td colspan="2">No Users Are Members</td></tr>
@@ -50,5 +30,28 @@
             }
         }
     </table>
+    
+    <button type="submit" class="btn btn-primary">Save</button>
+    
+    <h3 class="p-1">Grant @Model.Role.Name</h3>
+    <table class="table table-bordered table-sm table-striped purgeGrantRoleTable">
+        @if (Model.NonMembers.Count() == 0)
+        {
+            <tr><td colspan="2">All Users Are Members</td></tr>
+        }
+        else
+        {
+            @foreach (AppUser user in Model.NonMembers)
+            {
+                <tr>
+                    <td>@user.UserName</td>
+                    <td>
+                        <input type="checkbox" name="AddIds" value="@user.Id">
+                    </td>
+                </tr>
+            }
+        }
+    </table>
+    
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
