--- a/CNewsProject/Views/ExchangeRate/History.cshtml
+++ b/CNewsProject/Views/ExchangeRate/History.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Exchange Rate History</h2>
 
-<table class="table table-striped">
+<table class="table table-striped" id="exchRateHistoryTable">
     <thead>
         <tr>
             <th>Date</th>
