--- a/CNewsProject/Views/Shared/Components/SubTypes/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/SubTypes/Default.cshtml
@@ -1,16 +1,19 @@
 ﻿@model List<SubscriptionType>
 
 
+
+
 <div class="row">
-    <h1 class="bg-info text-white">All Sub Types</h1>
+    <h3>All Sub Types</h3>
 
     <div class="row">
-        <a asp-action="Index" class="col-1 btn btn-secondary">Back</a>
-        <a asp-action="AddType" class="col-1 offset-10 btn btn-primary">Create</a>
+        <a asp-action="Index" class="col-3 col-sm-2 col-lg-1 btn btn-secondary">Back</a>
+        <a asp-action="AddType" class="col-3 col-sm-2 col-lg-1 offset-6 offset-sm-8 offset-lg-10 btn btn-primary">Create</a>
     </div>
     
 
-    <table class="table table-sm table-bordered">
+    <table class="table table-sm table-bordered table-striped mt-2" id="subTypeTable">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Name</th>
@@ -18,6 +21,8 @@
             <th>Manage</th>
             <th>Delete</th>
         </tr>
+        </thead>
+        <tbody>
         @{
             string typeIds = "";
             int count = 0;
@@ -26,17 +31,17 @@
 
             foreach (SubscriptionType subType in Model)
             {
-                                    <tr>
-                                        <td>@subType.Id</td>
-                                        <td>@subType.TypeName</td>
-                                        <td>@subType.Price</td>
-                                        <td>
-                                            <a class="btn btn-sm btn-primary" asp-action="ManageType" asp-route-id="@subType.Id">
-                                                Manage
-                                            </a>
-                                        </td>
-                                        <td>
-                                            @{
+                <tr>
+                    <td>@subType.Id</td>
+                    <td>@subType.TypeName</td>
+                    <td>@subType.Price</td>
+                    <td>
+                        <a class="btn btn-sm btn-primary" asp-action="ManageType" asp-route-id="@subType.Id">
+                            Manage
+                        </a>
+                    </td>
+                    <td>
+                        @{
                             string tempId = "tryDelete" + Convert.ToString(count);
                             if (typeIds == "" || string.IsNullOrEmpty(typeIds))
                             {
@@ -46,22 +51,23 @@
                             {
                                 typeIds += "," + subType.Id;
                             }
-                                            }
+                        }
 
-                                            @{
+                        @{
                             //id="@tempId"
-                                            }
+                        }
 
-                                            <button id="@tempId" class="btn btn-sm btn-primary">
-                                                Delete
-                                            </button>
+                        <button id="@tempId" class="btn btn-sm btn-danger">
+                            Delete
+                        </button>
 
 
-                                        </td>
-                                    </tr>
+                    </td>
+                </tr>
                 count++;
             }
         }
+        </tbody>
     </table>
    
 
