--- a/CNewsProject/Views/Subscription/ThankYou.cshtml
+++ b/CNewsProject/Views/Subscription/ThankYou.cshtml
@@ -1,3 +1,5 @@
-﻿<h2>Thank You!</h2>
+﻿<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h2>Thank You!</h2>
 <p>You have successfully subscribed to our newsletter.</p>
 <p>Look forward to receiving the latest updates in your inbox.</p>
+</div>
