--- a/CNewsProject/Views/ThePublisher/Publish.cshtml
+++ b/CNewsProject/Views/ThePublisher/Publish.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Article
 
-<h1> Succsefully Published . I know I speelt that wrong bruv. No need to tell me aight!?=!=!=</h1>
-
-<h2> Anyway here's the article you puyblisht d if nincase you forgot mate;!;!;"#"'</h2>
+<h2>Article published</h2>
 
 <partial name="_ArticlePartial" model="@Model" />
