--- a/CNewsProject/Views/Weather/WeatherHistory.cshtml
+++ b/CNewsProject/Views/Weather/WeatherHistory.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Weather History</h2>
 
-<table class="table table-striped">
+<table class="table table-striped" id="weatherHistoryTable">
     <thead>
         <tr>
             <th>Date</th>
