--- a/CNewsProject/Views/Admin/Roles.cshtml
+++ b/CNewsProject/Views/Admin/Roles.cshtml
@@ -3,24 +3,24 @@
     ViewData["Title"] = "ROLES";
 }
 
-<style>
-    td:nth-of-type(1):before { content: "ID"; }
-    td:nth-of-type(2):before { content: "Name"; }
-    td:nth-of-type(3):before { content: "Users"; }
-</style>
+<div class="vadSomHelst">
 
-<h3 class="">All Roles</h3>
+    <h3 class="">All Roles</h3>
 
-<a asp-action="Index" class="btn btn-secondary">Back to Base</a>
-<a asp-action="CreateRole" class="btn btn-secondary">Create a Role</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to Base</a>
+    <a asp-action="CreateRole" class="btn btn-secondary">Create a Role</a>
 
 
-<div class="">
-<table class="table table-sm table-bordered table-bordered mt-1" id="rolesTable" style="white-space: nowrap">
-    <thead><tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr></thead>
+    <div class="">
+        <table class="table table-sm table-bordered table-bordered mt-1" id="rolesTable" style="white-space: nowrap">
+            <thead>
+            <tr>
+                <th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th>
+            </tr>
+            </thead>
 
 
-    @* @foreach (var role in Model)
+            @* @foreach (var role in Model)
     {
     <tr>
     <td>@role.Id</td>
@@ -38,38 +38,39 @@
     </tr>
 
     } *@
-    <tbody>
+            <tbody>
 
 
-    @{
-        List<string> vitalRoles = new() { "Admin", "The Publisher", "Journalist" };
+            @{
+                List<string> vitalRoles = new() { "Admin", "The Publisher", "Journalist" };
 
-        foreach (var role in Model)
-        {
-            <tr>
-                <td>@role.Id</td>
-                <td>@role.Name</td>
-                <td i-role="@role.Name"></td>
-                <td>
-                    <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
-                </td>
-                <td>
-                    @{
-                        if (vitalRoles.Contains(role.Name))
-                        {
-                            <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@role.Name">Delete</a>
-                        }
-                        else
-                        {
-                            <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
-                        }
-                    }
-        
-                </td>
-        
-            </tr>
-        }
-    }
-    </tbody>
-</table>
+                foreach (var role in Model)
+                {
+                    <tr>
+                        <td>@role.Id</td>
+                        <td>@role.Name</td>
+                        <td i-role="@role.Name"></td>
+                        <td>
+                            <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
+                        </td>
+                        <td>
+                            @{
+                                if (vitalRoles.Contains(role.Name))
+                                {
+                                    <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@role.Name">Delete</a>
+                                }
+                                else
+                                {
+                                    <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
+                                }
+                            }
+
+                        </td>
+
+                    </tr>
+                }
+            }
+            </tbody>
+        </table>
+    </div>
 </div>
