--- a/CNewsProject/Views/Admin/UpdateRole.cshtml
+++ b/CNewsProject/Views/Admin/UpdateRole.cshtml
@@ -11,28 +11,8 @@
     <input type="hidden" name="roleName" value="@Model.Role.Name" />
     <input type="hidden" name="roleId" value="@Model.Role.Id" />
 
-    <h2 class="bg-info p-1 text-white">Grant @Model.Role.Name</h2>
-    <table class="table table-bordered table-sm">
-        @if (Model.NonMembers.Count() == 0)
-        {
-            <tr><td colspan="2">All Users Are Members</td></tr>
-        }
-        else
-        {
-            @foreach (AppUser user in Model.NonMembers)
-            {
-                <tr>
-                    <td>@user.UserName</td>
-                    <td>
-                        <input type="checkbox" name="AddIds" value="@user.Id">
-                    </td>
-                </tr>
-            }
-        }
-    </table>
-
-    <h2 class="bg-info p-1 text-white">Purge @Model.Role.Name</h2>
-    <table class="table table-bordered table-sm">
+    <h2 id="memberHitBox" class="bg-info p-1 text-white c-nonselectable c-hover-pointer">Purge @Model.Role.Name</h2>
+    <table id="memberTarget" class="table table-bordered table-sm">
         @if (Model.Members.Count() == 0)
         {
             <tr><td colspan="2">No Users Are Members</td></tr>
@@ -50,5 +30,31 @@
             }
         }
     </table>
+    
+    <h2 id="nonMemberHitBox" class="bg-info p-1 text-white c-hover-pointer c-nonselectable">Grant @Model.Role.Name</h2>
+    <table id="nonMemberTarget" class="table table-bordered table-sm">
+        @if (Model.NonMembers.Count() == 0)
+        {
+            <tr><td colspan="2">All Users Are Members</td></tr>
+        }
+        else
+        {
+            @foreach (AppUser user in Model.NonMembers)
+            {
+                <tr>
+                    <td>@user.UserName</td>
+                    <td>
+                        <input type="checkbox" name="AddIds" value="@user.Id">
+                    </td>
+                </tr>
+            }
+        }
+    </table>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+<script src="/js/cscripts.js"></script>
+<script> 
+AddToggleableElementId("memberHitBox", "memberTarget");
+AddToggleableElementId('nonMemberHitBox', 'nonMemberTarget');
+</script>
