--- a/CNewsProject/Views/Admin/Users.cshtml
+++ b/CNewsProject/Views/Admin/Users.cshtml
@@ -13,7 +13,7 @@
         <th>ID</th>
         <th>Name</th>
         <th>Email</th>
-        <th>Manage</th>
+        <th>GiveSub</th>
         <th>Edit</th>
         <th>Delete</th>
     </tr>
@@ -34,7 +34,7 @@
                 </a>
             </td>
             <td>
-                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                <form asp-action="AdminDelete" asp-route-id="@user.Id" method="post">
                     <button type="submit" class="btn btn-sm btn-danger">
                         Delete
                     </button>
