--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -4,6 +4,15 @@
 /*    background-size: 166px 75px;*/
 /*}*/
 
+
+@media screen and (max-width: 760px) {  
+    .vadSomHelst{
+        td:nth-of-type(1):before { content: "ID: "; }
+        td:nth-of-type(2):before { content: "Name: "; }
+        td:nth-of-type(3):before { content: "Users: "; }
+    }
+}
+
 .c-click-through{
     pointer-events: none;
 }
